1.4.1 - TBD

* Fixed scenes not able to be saved after fresh install, caused
  by the scene directory not yet being created.

1.4.0 - 2016-09-23

* Chunky now requires Java 8 update 40, or a later version.
* Added rendering for Minecraft 1.10 blocks:
    * Bone Block
    * Magma Block
    * Red Nether Brick
    * Nether Wart Block
* Modernized the Chunky User Interface by rewriting it in JavaFX.
* Most of the UI remains similar to the old version, but some parts
  were redesigned:
    * Controls for multiple cameras have been simplified.
    * The Highlight tab has been merged into the Options tab.
    * The gradient editor and color pickers were slightly redesigned.
    * Added some sky gradient presets.
    * Removed the fullscreen option for the preview window.
* Removed old features that were not well supported. The goal is to
  make these into separate plugins:
    * Removed the benchmark tool.
    * Removed the experimental OpenCL renderer.
* Holding Control while moving the camera multiplies move distance by 100.
* The render preview scaling option has been moved into a context menu.
  Right clicking the render preview window brings up the scaling menu.
* Added option to show guide grid in the render preview. The option is
  accessed through the right-click context menu.
* Pressing Space in the render preview window starts/pauses/resumes rendering.
* Fixed player entities not being saved if they were the only entity type in a
  scene.
* Fixed bug preventing new players from being added to a scene if no players
  were already loaded.
* Minor changes to the UI:
    * Added an icon to the camera view visualization.
    * Removed the chunk loading indicator icon.
    * Removed the player Y position indicator.
    * Removed fullscreen preview.
* Added new command-line options:
    * Added -list-scenes command.
    * Added -merge-dump command.
    * Made it possible to manually set the Chunky settings directory using a