@@ -2,6 +2,8 @@
 
 * Fixed scenes not able to be saved after fresh install, caused
   by the scene directory not yet being created.
+* Added "Face target" button in the Entities tab.
+* Expanded plugin API.
 
 1.4.0 - 2016-09-23
 
